--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Сапер</title>
-    <link rel='stylesheet' type='text/css' href='css/style.css'/>
+    <link rel='stylesheet/less' type='text/css' href='css/style.less'/>
     <script type="text/javascript" charset="utf-8" src="http://code.jquery.com/jquery-2.0.3.js"></script>
     <script type="text/javascript" charset="utf-8" src="https://github.com/jquery/jquery-ui"></script>
+    <script type="text/javascript" charset="utf-8" src="js/util/less.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
 </head>
 <body>
