- клик по флажку правой кнопкой мыши не ставит бомбу - мелкий рефакторинг - начал делать клик двумя кнопками мыши (не окончено)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         </table>
         <span class="label">Осталось бомб:  </span>
-        <div id="ostatok"></div>
+        <div id="balance"></div>
     </div>
 </body>
 </html>
