--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html>
 <head>
     <title>Сапер</title>
-    <link rel='stylesheet/less' type='text/css' href='css/style.less'/>
-    <script type="text/javascript" charset="utf-8" src="http://code.jquery.com/jquery-2.0.3.js"></script>
-    <script type="text/javascript" charset="utf-8" src="https://github.com/jquery/jquery-ui"></script>
-    <script type="text/javascript" charset="utf-8" src="js/util/less.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
+    <link rel='stylesheet/less' type='text/css' href='css/style.css'/>
 </head>
 <body>
     <div id="gameBlock">
-        <table id="gameTable" class="table">
+        <!--<table id="gameTable" class="table">-->
 
-        </table>
-        <span class="label">Осталось бомб:  </span>
-        <div id="balance"></div>
+        <!--</table>-->
+        <!--<span class="label">Осталось бомб:  </span>-->
+        <!--<div id="balance"></div>-->
     </div>
+    <script data-main="js/app" src="js/util/require.js"></script>
 </body>
 </html>
