Сделано View. начал делать обработку событий на view контроллером

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>Сапер</title>
-    <link rel='stylesheet/less' type='text/css' href='css/style.css'/>
+    <link rel='stylesheet' type='text/css' href='css/style.css'/>
 </head>
 <body>
-    <div id="gameBlock">
+    <div id="gameContainer">
         <!--<table id="gameTable" class="table">-->
 
         <!--</table>-->
