Сделан основной функционал: 1) Обработчики 2) Баланс 3) Таймер

--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <link rel='stylesheet' type='text/css' href='css/style.css'/>
 </head>
 <body>
-    <div id="gameContainer">
-        <!--<table id="gameTable" class="table">-->
-
-        <!--</table>-->
-        <!--<span class="label">Осталось бомб:  </span>-->
-        <!--<div id="balance"></div>-->
-    </div>
+    <div id="gameContainer"></div>
     <script data-main="js/app" src="js/util/require.js"></script>
 </body>
 </html>
